--- a/SonarCloud/Properties/launchSettings.json
+++ b/SonarCloud/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:54643",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:50267",
+      "sslPort": 44300
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AzureDevOps_CI": {
+    "SonarCloud": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
